# Arc

./: CMakeLists.txt
headers/: FS.h  UI.h  cat.h  cd.h  list.h  mkdir.h  preview.h  pwd.h  rm.h  touch.h  utils.h
help/: ascii.c  ascii.h  help.c  help.h
src/: arc.c  cat.c  cd.c  list.c  mkdir.c  pwd.c  rm.c  touch.c  utils.c
src/Preview/: FS.c  UI.c  preview.c
